@@ -1,6 +1,7 @@
 Python bindings
 ===============
 
+Csaba Henk <csaba.henk@creo.hu>
 Sebastien Delafond <sdelafond@gmx.net>
 Steven James
 Jeff Epler         <jepler@unpythonic.dhs.org>
